--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.43.8",
     "react-paginate": "^8.1.5",
     "react-scripts": "5.0.1",
+    "react-widgets": "^5.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
