Start full redesign, reorganize file structure

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ImmoHub",
-  "name": "ImmoHub",
+  "short_name": "ImmoBee",
+  "name": "ImmoBee",
   "icons": [
     {
       "src": "favicon.ico",
