--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "choices.js": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
     "react-paginate": "^8.1.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "react-widgets": "^5.8.4",
-    "web-vitals": "^2.1.4"
+    "react-widgets": "^5.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
