--- a/package.json
+++ b/package.json
@@ -6,21 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.8",
     "follow-redirects": "^1.15.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.8",
     "react-paginate": "^8.1.5",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
     "react-widgets": "^5.8.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +39,11 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.59.3"
+    "react-hook-form": "^7.51.2",
+    "sass": "^1.59.3",
+    "vite": "^5.2.6"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.13.1"
   }
 }
