--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.5",
     "react-router-dom": "^6.11.2",
-    "react-widgets": "^5.8.4"
+    "react-slick": "^0.30.2",
+    "react-widgets": "^5.8.4",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "vite",
